--- a/index.css
+++ b/index.css
@@ -3,6 +3,22 @@
       #map {
         height: 83%;
       }
+      #directions_panel {
+        position: absolute;
+        top: 101.5%;
+        left: 80%;
+        bottom:100%;
+        z-index: 5;
+        background-color: white;
+        padding: 5px;
+        /*border: 1px solid #999;*/
+        text-align: center;
+        font-family: 'Roboto','sans-serif';
+        line-height: 30px;
+        padding-left: 10px;
+        overflow: auto;
+        height:83.5%;
+      }
       /* Optional: Makes the sample page fill the window. */
       html, body {
         height: 100%;
